fixed email form alignment

--- a/client/main.css
+++ b/client/main.css
@@ -297,3 +297,10 @@ i.trash.icon {
 .SearchBarContainer{
     margin-bottom: 15px;
 }
+
+.emailFormItin {
+    width: 70%;
+    /* margin: auto; */
+    position: absolute;
+    left: 10%;
+}
